--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LSBET Australian CodeS</title>
+    <title>LSPublication Australian CodeS</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* --- VVIP FUTURISTIC DARK THEME --- */
+        /* --- VVIP AGCN DARK THEME --- */
         :root {
             --bg-dark: #0A0A1F; /* Very deep blue-black */
             --container-dark: rgba(26, 26, 46, 0.9); /* Semi-transparent dark container */
@@ -18,7 +18,7 @@
             --shadow-yellow: 0 0 8px var(--neon-yellow), 0 0 15px var(--neon-yellow);
         }
 
-        /* Base and Fonts */
+        /*  Fonts */
         body {
             font-family: 'Orbitron', 'Segoe UI', sans-serif;
             margin: 0;
@@ -1330,12 +1330,12 @@ Australian Horse Racing Codes (ISO 3166) </h1>
         auDate.setDate(slDate.getDate() + 2);
         const auDateString = auDate.toLocaleString('en-US', options);
         
-        // Header for the output (uses monospace for alignment)
+        // Header NEW for the output (uses monospace for alignment)
         let textContent = `
 -------------------------------------------------------------
 DATE SL: ${slDateString}
 DATE AU: ${auDateString}
-TOOL: LSBET AUSTRALIA RACE CODE Finder Dashboard
+TOOL: LS Publication AUSTRALIA RACE CODE Finder
 TOTAL CODES: ${currentDisplayedData.length}
 -------------------------------------------------------------
 `;
@@ -1549,4 +1549,3 @@ TOTAL CODES: ${currentDisplayedData.length}
 
 </body>
 </html>
-
